many fixes
fixed needed time to get sponsorposts for newsfeed

fixed empty sponsorfeed

speedup many things

added force applying filters